--- a/templates/nav.html
+++ b/templates/nav.html
@@ -13,7 +13,7 @@
         <nav class="collapse navbar-collapse bs-navbar-collapse" id="top" role="navigation">
             <ul class="nav navbar-nav">
                 <li class=""><a href="{% url 'assignment_index' %}">作业</a></li>
-{#                <li class=""><a href="">资源</a></li>#}
+                <li class=""><a href="{% url 'src_index' %}">资源</a></li>
 {#                <li class=""><a href="">发现</a></li>#}
 
             </ul>
