--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -100,7 +100,8 @@ hr {
           box-sizing: content-box;
 }
 pre {
-  overflow: auto;
+    max-height: 600px;
+  overflow-y: auto;
 }
 code,
 kbd,
