--- a/blog/templates/blog/view.html
+++ b/blog/templates/blog/view.html
@@ -44,8 +44,8 @@
                         {% for br in breply %}
                             <div class="list-group-item">
                                 <div class="row">
-                                    <a href="" class="col-sm-1 col-xs-2 col-md-1">
-                                        <img src="/static/images/default.png" height="50px" width="50px"
+                                    <a href="{% url 'user_profile' br.auth.id %}" class="col-sm-1 col-xs-2 col-md-1">
+                                        <img src="{{ br.auth.profile.head }}" height="50px" width="50px"
                                              class="img-circle">
                                     </a>
 
@@ -67,7 +67,7 @@
                     <form role="form" method="post" action="{% url 'create_breply' dn blog_id %}">
                         {% csrf_token %}
                         <textarea placeholder="评论" name="content" class="form-control" id="editor"></textarea>
-                        <button class="btn btn-success pull-right" type="submit" style="margin-top: 10px">提交</button>
+                        <button class="btn btn-success pull-right" type="submit" style="margin-top: 10px;width: 100px">提交</button>
                     </form>
                 </div>
             </div>
