--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -24,7 +24,7 @@
                         <li class="list-group-item">
                             <div class="row">
                                 <a href="{% url 'user_profile' t.auth.id %}" class="col-sm-1 col-xs-2 col-md-1">
-                                    <img src="/static/images/default.png" height="50px" width="50px"
+                                    <img src="{{ t.auth.profile.head }}" height="50px" width="50px"
                                          class="img-circle">
                                 </a>
 
