--- a/news/templates/news/add.html
+++ b/news/templates/news/add.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
-    <div class="container" style="margin-top: 20px">
+    <div class="container">
         <div class="col-md-8">
             {% if messages %}
                 {% for message in messages %}
