--- a/templates/pitch.html
+++ b/templates/pitch.html
@@ -1,5 +1,5 @@
-<div class="container-fluid" id="pitch">
-    <div class="jumbotron">
+<div class="container-fluid" id="pitch" style="margin-top: -20px">
+    <div class="jumbotron" >
         <h1>We run cool events</h1>
   		<p class="lead">大连工业大学CSDN高校俱乐部</p>
     </div>
