--- a/assignment/templates/assignment/index.html
+++ b/assignment/templates/assignment/index.html
@@ -3,7 +3,7 @@
     {% include 'nav.html' %}
 {% endblock %}
 {% block assignment %}
-    <div class="container" style="margin-top: 20px">
+    <div class="container">
         <div class="col-md-4">
             <div class="panel panel-default">
                 <div class="panel-heading" style="background-color: #C6E5E9">
