--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,7 +3,7 @@
 {% load pagination_tags %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
-    <div class="container" style="margin-top: 20px">
+    <div class="container" >
         <div class="col-md-8 col-sm-8 col-sm-8">
             {% if messages %}
                 {% for message in messages %}
