--- a/blog/templates/blog/view.html
+++ b/blog/templates/blog/view.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
-    <div class="container" style="margin-top: 20px">
+    <div class="container" >
         <div class="row">
 
             <div class="col-md-offset-2 col-md-8">
