--- a/blog/templates/blog/write.html
+++ b/blog/templates/blog/write.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
-    <div class="container" style="margin-top: 20px">
+    <div class="container">
         <div class="col-md-8 col-md-offset-2">
 
             {% if user.is_authenticated %}
