--- a/forum/templates/forum/create.html
+++ b/forum/templates/forum/create.html
@@ -3,7 +3,7 @@
     {% include 'navbar.html' %}
 {% endblock %}
 {% block main %}
-    <div class="container" style="margin-top: 20px">
+    <div class="container" >
         <div class="row">
             <div class="col-md-8">
                 {% if messages %}
