--- a/forum/templates/forum/topic.html
+++ b/forum/templates/forum/topic.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
-    <div class="container" style="margin-top: 20px;">
+    <div class="container" >
         <div class="row">
             <div class="col-md-8">
                 <div class="list-group">
@@ -13,7 +13,7 @@
                                      style="font-size: 25px;border-bottom: 1px #dcdcdc solid;padding-bottom: 10px">{{ topics.title }}</div>
                             </div>
                             <div class="pull-right" style="margin-right: 10px">
-                                <a href="">
+                                <a href="{% url 'user_profile' topics.auth.id %}">
                                     <img src="{{ topics.auth.profile.head }}" height="50px" width="50px"
                                          class="img-circle">
                                 </a>
