--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -4,7 +4,7 @@
     {% include 'navbar.html' %}
 {% endblock %}
 {% block main %}
-    <div class="container" style="margin-top: 20px;">
+    <div class="container" >
         <div class="row">
             <div class="col-md-8">
                 <div class="panel panel-default">
