--- a/templates/index.html
+++ b/templates/index.html
@@ -13,30 +13,62 @@
                     <div class="alert alert-success">{{ message }}</div>
                 {% endfor %}
             {% endif %}
+            <div class="alert alert-warning" role="alert">
+                <p>dlpucsdn社区提供作业查询和资源下载和各大学科内部之间的交流等功能，你可以在分区内发布自己感兴趣的话题，推荐使用谷歌或火狐浏览器，需要申请分区请联系作者。
+                </p>
+            </div>
             <div class="panel panel-default">
-                <div class="panel-heading"  style="background-color: #C6E5E9">
+                <div class="panel-heading" style="background-color: #C6E5E9">
                     社区
                 </div>
                 <div class="list-group">
-
                     <div class="list-group-item">
                         <span class="label btn-blue" style="padding: 8px;">信息学院</span>
-                        <a href="/cs/" class="btn btn-red">计算机</a>
+                        <a href="/cs/" class="btn btn-red">计算机网络</a>
+                        <a href="/xj/" class="btn btn-red">信计</a>
                         <a href="/au/" class="btn btn-red">自动化</a>
+                        <a href="/gz/" class="btn btn-red">光照</a>
+                        <a href="/tx/" class="btn btn-red">通信</a>
                     </div>
-
-
-
+                    <div class="list-group-item">
+                        <span class="label btn-blue" style="padding: 8px;">艺术学院</span>
+                        <a href="/sc/" class="btn btn-red">视觉传达</a>
+                        <a href="/jg/" class="btn btn-red">景观设计</a>
+                        <a href="/sm/" class="btn btn-red">数字媒体</a>
+                        <a href="/ds/" class="btn btn-red">雕塑</a>
+                    </div>
+                    <div class="list-group-item">
+                        <span class="label btn-blue" style="padding: 8px;">服装学院</span>
+                        <a href="/fz/" class="btn btn-red">服装设计</a>
+                        <a href="/ys/" class="btn btn-red">艺术设计</a>
+                        <a href="/fz/" class="btn btn-red">纺织工程</a>
+                    </div>
+                    <div class="list-group-item">
+                        <span class="label btn-blue" style="padding: 8px;">管理学院</span>
+                        <a href="/gs/" class="btn btn-red">工商</a>
+                        <a href="/xg/" class="btn btn-red">信管</a>
+                        <a href="/gm/" class="btn btn-red">国贸</a>
+                        <a href="/rl/" class="btn btn-red">人力</a>
+                        <a href="/wl/" class="btn btn-red">物流</a>
+                        <a href="/ds/" class="btn btn-red">电商</a>
+                    </div>
+                    <div class="list-group-item">
+                        <span class="label btn-blue" style="padding: 8px;">外国语学院</span>
+                        <a href="/ja/" class="btn btn-red">日语</a>
+                        <a href="/en/" class="btn btn-red">英语</a>
+                        <a href="/cn/" class="btn btn-red">对外汉语</a>
+                    </div>
+                    <div class="list-group-item">
+                        <span class="label btn-blue" style="padding: 8px;">其他学院</span>
+                        <a href="/qh/" class="btn btn-red">轻化学院</a>
+                        <a href="/fc/" class="btn btn-red">纺材学院</a>
+                        <a href="/jx/" class="btn btn-red">机械学院</a>
+                        <a href="/sw/" class="btn btn-red">生物学院</a>
+                        <a href="/ad/" class="btn btn-red">爱丁堡学院</a>
+                        <a href="/gj/" class="btn btn-red">国教学院</a>
+                    </div>
                 </div>
-
             </div>
-            <div class="alert alert-warning" role="alert">
-                <p>dlpucsdn社区提供各专业内部之间的学科交流、作业查询和资源下载等功能，你可以在分区内发布自己感兴趣的话题，推荐使用谷歌或火狐浏览器，请将你的建议或发现的bug提交至<a
-                        href="https://github.com/tcitry/dlpucsdn/issues" target="_blank">这里</a>，需要申请分区请联系作者。
-                </p>
-            </div>
-
-
         </div>
         <div class="col-md-4">
             <div style="text-align: center">
