--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-default navbar-static-top" role="banner" style="border-bottom: 1px solid #dcdcdc;">
+<header class="navbar navbar-default navbar-fixed-top" role="banner" style="background-color: #ffffff">
     <div class="container">
         <div class="navbar-header">
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
