--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -23,7 +23,7 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div style="text-align: center">
+                <div style="text-align: center;margin-top: -20px">
                     {% paginate %}
                 </div>
             </div>
