--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -10,17 +10,13 @@
                     <p class="alert alert-danger">{{ message }}</p>
                 {% endfor %}
             {% endif %}
-            <div>
-                <div class="jumbotron" style="background-color: #C6E5E9;text-align: center">
-                    <h2><a href="{% url 'write_blog' dn %}">Write the blog</a> , to be a better man</h2>
-                </div>
-            </div>
+
             {% autopaginate blog 15 %}
             {% for b in blog %}
-                <div class="" style="border-bottom: 1px solid darkgreen;padding-bottom: 5px">
+                <div class="blog" style="border-bottom: 1px solid darkgreen;padding-bottom: 5px;">
                     <h4 style="margin-top: 10px"><a href="{{ b.id }}">{{ b.title }}</a></h4>
 
-                    <p>{{ b.content | truncatechars_html:100 | safe }}</p>
+                    <p>{{ b.content | truncatechars_html:200 | safe }}</p>
 
                     <div style="margin-top: -5px"><span><a id="count" href="{% url 'user_profile' b.auth.id %}"
                                                            style="text-decoration: none">{{ b.auth }}</a></span><span> 发表于 {{ b.time_created | date }} </span><span>评论({{ b.reply_count }}) 点击({{ b.click }})</span>
