--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,18 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content="dlpucsdn">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0, user-scalable=no" name="viewport">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/simditor.css' %}"/>
-    <script rel="stylesheet" type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery-2.1.1.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/module.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/uploader.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/simditor-all.js' %}"></script>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/simditor.css"/>
+    <script src="/static/js/jquery-2.1.1.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/module.js"></script>
+    <script src="/static/js/uploader.js"></script>
+    <script src="/static/js/simditor-all.js"></script>
+
     <style>
         [touch-action="none"] {
             -ms-touch-action: none;
@@ -51,7 +53,7 @@
 {% block assignment %}{% endblock %}
 {% block research %}{% endblock %}
 
-<footer style="border-top: 1px solid #dcdcdc">
+<footer style="border-top: 1px solid #dcdcdc;padding-top: 10px;margin-top: 20px">
     <div class="container" style="text-align: center;line-height: 2">
 
         <div>
@@ -60,7 +62,8 @@
             <a href="https://github.com/tcitry" target="_blank" style="margin-left: 10px;margin-right: 10px">联系作者</a>
         </div>
         <div>
-            本站由<a href="http://qiniu.com" target="_blank">七牛云</a>提供静态存储，<a href="http://digitalocean.com" target="_blank">DigitalOcean</a>提供服务器
+            本站由<a href="http://qiniu.com" target="_blank">七牛云</a>提供静态存储，<a href="http://digitalocean.com"
+                                                                           target="_blank">DigitalOcean</a>提供服务器
         </div>
         <div>
             <a href="http://www.csdn.net/" target="_blank"><img src="/static/images/csdn.png"></a>
@@ -70,18 +73,27 @@
 
 
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-50554094-2', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-50554094-2', 'auto');
+    ga('send', 'pageview');
 
 </script>
 
 <script rel="stylesheet" type="text/javascript">
-    $('.collapse').collapse()
+    $('.dropdown-toggle').dropdown();
 </script>
+
+
 </body>
 </html>
