--- a/forum/templates/forum/topic.html
+++ b/forum/templates/forum/topic.html
@@ -15,7 +15,7 @@
                             <div class="pull-right" style="margin-right: 10px">
                                 <a href="{% url 'user_profile' topics.auth.id %}">
                                     <img src="{{ topics.auth.profile.head }}" height="50px" width="50px"
-                                         class="img-circle">
+                                         class="img-rounded">
                                 </a>
                             </div>
                         </div>
