--- a/templates/base.html
+++ b/templates/base.html
@@ -62,8 +62,8 @@
             <a href="https://github.com/tcitry" target="_blank" style="margin-left: 10px;margin-right: 10px">联系作者</a>
         </div>
         <div>
-            本站由<a href="http://qiniu.com" target="_blank">七牛云</a>提供静态存储，<a href="http://digitalocean.com"
-                                                                           target="_blank">DigitalOcean</a>提供服务器
+            由<a href="http://qiniu.com" target="_blank">七牛云</a>提供静态存储，<a href="http://digitalocean.com"
+                                                                        target="_blank">DigitalOcean</a>提供服务器
         </div>
         <div>
             <a href="http://www.csdn.net/" target="_blank"><img src="/static/images/csdn.png"></a>
