--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                 {% endfor %}
             {% endif %}
             <div class="alert alert-warning" role="alert">
-                <p>dlpucsdn社区提供作业查询和资源下载和各大学科内部之间的交流等功能，你可以在分区内发布自己感兴趣的话题，推荐使用谷歌或火狐浏览器，需要申请分区请联系作者。
+                <p>dlpucsdn社区提供作业查询和资源下载和各大学科内部之间的交流等功能，你可以在分区内发布自己感兴趣的话题，推荐使用谷歌或火狐浏览器，需要申请分区请直接联系作者就OK。
                 </p>
             </div>
             <div class="panel panel-default">
@@ -78,6 +78,16 @@
                                 <li><a href="/cs/">日语</a></li>
                                 <li><a href="/gz/">英语</a></li>
                                 <li><a href="/tx/">对外汉语</a></li>
+                            </ul>
+                        </div>
+                        <div class="btn-group dropdown">
+                            <button type="button" class="btn btn-default dropdown-toggle disabled" data-toggle="dropdown">
+                                社团 <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="/cs/">DlpuCsdn</a></li>
+                                <li><a href="/gz/"></a></li>
+                                <li><a href="/tx/"></a></li>
                             </ul>
                         </div>
                     </div>
