--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,14 +3,14 @@
 {% load pagination_tags %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
-    <div class="container" >
+    <div class="container">
         <div class="col-md-8 col-sm-8 col-sm-8">
             {% if messages %}
                 {% for message in messages %}
                     <p class="alert alert-danger">{{ message }}</p>
                 {% endfor %}
             {% endif %}
-
+            <a class="btn-green" href="{% url 'write_blog' dn %}">书写博客</a>
             {% autopaginate blog 15 %}
             {% for b in blog %}
                 <div class="blog" style="border-bottom: 1px solid darkgreen;padding-bottom: 5px;">
