--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,6 +16,9 @@
                 <li class=""><a href="{% url 'forum_index' dn %}">论坛</a></li>
                 <li class=""><a href="{% url 'blog_index' dn %}">博客</a></li>
                 <li class=""><a href="{% url 'research_index' dn %}">科研</a></li>
+                <li class=""><a href="{% url 'assignment_index' %}">作业</a></li>
+                <li class=""><a href="{% url 'src_index' %}">资源</a></li>
+{#                <li class=""><a href="">发现</a></li>#}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
