--- a/uploader/templates/uploader/error.html
+++ b/uploader/templates/uploader/error.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block nav %}{% include 'nav.html' %}{% endblock %}
 {% block main %}
-    <p>upload success</p>
+    <p>error</p>
 {% endblock %}
